--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="hero-cont">
                     <h1>Narvodaya Computer Training Institute</h1>
                     <p>Empowering Minds, Transforming Futures - Narvodaya Computer Training Institute.</p>
-                    <button >Get demo class</button>
+                    <button>Get demo class</button>
                 </div>
             </div>
         </section>
@@ -68,7 +68,8 @@
             </div>
             <div class="tp-coursebox" id="fullstack">
                 <div class="leftbox">
-                    <img src="/NarvodyaWebsite/assets/img/narvodaya poster/full stack.jpeg" alt="Full Stack Developements">
+                    <img src="/assets/img/narvodaya poster/full stack.jpeg"
+                        alt="Full Stack Developements">
                 </div>
                 <div class="rightbox">
                     <h2>Full Stack Web Developement</h2>
@@ -95,7 +96,8 @@
                     <a href="#" id="mrktbtn" class="crsbtn">Get Course</a>
                 </div>
                 <div class="leftbox">
-                    <img src="/NarvodyaWebsite/assets/img/narvodaya poster/digital marketing.jpeg" alt="Full Stack Developements">
+                    <img src="/assets/img/narvodaya poster/digital marketing.jpeg"
+                        alt="Full Stack Developements">
                 </div>
             </div>
             <div class="viewbtn">
@@ -105,7 +107,7 @@
         <!-- Benifit Section Starts-->
         <section class="benifits">
             <div class="left-bnimg">
-                <img src="/NarvodyaWebsite/assets/img/benifit-img.jpg" alt="men Coding">
+                <img src="/assets/img/benifit-img.jpg" alt="men Coding">
             </div>
             <div class="right-bncont">
                 <div class="top-bn">
@@ -156,12 +158,98 @@
         </section>
 
 
+
+        <section id="contianer_craousels_course">
+           <div class="heading">
+            <h2>Our Courses</h2>
+            <p>Explore Our Popular Online Courses</p>
+           </div>
+            <div class="middlecarousels">
+                <div class="centercarousels">
+                    <div class="box-caro">
+                        <div class="boxcar-course-1">
+                            <h2>ADCA (Advance Diploma in Computer Application)</h2>
+                            <div class="stars">
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                            </div>
+                            <p>Duration: 3 Months</p>
+                            <button id="price">Rs 1800/Monthly</button>
+                            <button id="enroll"> <ion-icon name="arrow-forward-outline"></ion-icon>Enroll Now</button>
+                        </div>
+                        <div class="img">
+                            <img src="assets/img/team-mamber/adca.jpg" alt="adca img">
+                            
+                        <div class="overlayview">
+                            <button id="viewlarge">View Large <ion-icon name="arrow-redo-outline"></ion-icon></button>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="box-caro">
+                        <div class="boxcar-course-2">
+                            <h2>BCC (Certification in Basic Computer Course)</h2>
+                            <div class="stars">
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="half-star-sharp"></ion-icon>
+                            </div>
+                            <p>Duration: 4 Months</p>
+                            <button id="price">Rs 1499/Monthly</button>
+                            <button id="enroll"> <ion-icon name="arrow-forward-outline"></ion-icon>Enroll Now</button>
+                        </div>
+                        <div class="img">
+                            <img src="assets/img/team-mamber/basic course.jpg" alt="adca img">
+                            <div class="overlayview">
+                                <button id="viewlarge">View Large <ion-icon name="arrow-redo-outline"></ion-icon></button>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="box-caro">
+                        <div class="boxcar-course-3">
+                            <h2>CFA (Certificate in Financials Accounting)</h2>
+                            <div class="stars">
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                                <ion-icon name="star-sharp"></ion-icon>
+                            </div>
+                            <p>Duration: 5 Months</p>
+                            <button id="price">Rs 1800/Monthly</button>
+                            <button id="enroll"> <ion-icon name="arrow-forward-outline"></ion-icon>Enroll Now</button>
+                        </div>
+                        <div class="img">
+                            <img src="assets/img/team-mamber/adca.jpg" alt="adca img">
+                            <div class="overlayview">
+                                <button id="viewlarge">View Large <ion-icon name="arrow-redo-outline"></ion-icon></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="coursegrid">
+            <div class="boxgrid">
+                
+            </div>
+        </section>
+
     </main>
 
 
 
     <script src="https://kit.fontawesome.com/db0187a54c.js" crossorigin="anonymous"></script>
     <script src="js/narvodya.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
