Course animation add

--- a/index.html
+++ b/index.html
@@ -238,7 +238,24 @@
 
         <section id="coursegrid">
             <div class="boxgrid">
-                
+                <img src="assets/img/grid-course-img/adac.png" alt="adac png image">
+                <h2>Adac Course</h2>
+            </div>
+            <div class="boxgrid">
+                <img src="assets/img/grid-course-img/college.gif" alt="adac png image">
+                <h2>CTT Course</h2>
+            </div>
+            <div class="boxgrid">
+                <img src="assets/img/grid-course-img/interface.gif" alt="adac png image">
+                <h2>BCC Course</h2>
+            </div>
+            <div class="boxgrid">
+                <img src="assets/img/grid-course-img/line-chart.gif" alt="adac png image">
+                <h2>CFA Course</h2>
+            </div>
+            <div class="boxgrid">
+                <img src="assets/img/grid-course-img/paint-palette.gif" alt="adac png image">
+                <h2>DID Course</h2>
             </div>
         </section>
 
